--- a/frontend/src/pages/CategoriesPage.module.css
+++ b/frontend/src/pages/CategoriesPage.module.css
@@ -1,5 +1,7 @@
 .page {
-  padding: 64px 24px 96px;
+  padding: 64px 0 96px;
+  width: 100%;
+  align-self: stretch;
 }
 
 .header {
